# rogue_lite_arpg

./: .conflict-files  .gitignore  Cargo.toml  README.md  build.rs  index.html  justfile
.auto-resolution/assets/: permissions.txt
.auto-resolution/src/ai/: simple_motion.rs
.auto-resolution/src/animation/: animate_sprite.rs  components.rs
.auto-resolution/src/combat/: invulnerable.rs  mod.rs
.auto-resolution/src/configuration/: collision_layers.rs  debug.rs  view.rs
.auto-resolution/src/econ/: plugin.rs
.auto-resolution/src/enemy/: components.rs
.auto-resolution/src/items/: mod.rs
.auto-resolution/src/labels/: states.rs
.auto-resolution/src/map/: mod.rs  plugin.rs  portal.rs
.auto-resolution/src/npc/: mod.rs  movement.rs
.auto-resolution/src/progression/: mod.rs
.auto-resolution/src/ui/: plugin.rs
.conflict-base-0/: .gitignore
.conflict-base-0/src/ai/: plugin.rs  state.rs
.conflict-base-0/src/labels/: mod.rs
.conflict-base-0/src/map/: chest.rs
.conflict-base-0/src/player/: plugin.rs
.conflict-base-0/src/ui/: damage_overlay.rs
.conflict-side-0/: README.md
.conflict-side-0/assets/config/: enemies.ron
.conflict-side-0/src/labels/: sets.rs
.conflict-side-1/: Cargo.toml
.conflict-side-1/src/animation/: update_animation.rs
.conflict-side-1/src/player/: plugin.rs
.conflict-side-1/src/ui/: game_over_screen.rs
.github/workflows/: build.yml
.jjconflict-base-0/: README.md
.jjconflict-base-0/src/: lib.rs
.jjconflict-base-0/src/ai/: mod.rs
.jjconflict-base-0/src/animation/: components.rs  (+1 more)
.jjconflict-base-16/: .gitignore
.jjconflict-base-37/: Cargo.toml
.jjconflict-base-37/src/animation/: plugin.rs
.jjconflict-base-37/src/configuration/: setup.rs
.jjconflict-base-37/src/econ/: currency.rs
.jjconflict-base-37/src/items/lootable/: handle_item_to_ground.rs
.jjconflict-base-37/src/map/systems/zone/: background.rs
.jjconflict-base-37/src/player/: interact.rs
.jjconflict-base-37/src/ui/: damage_overlay.rs  display_case.rs
.jjconflict-base-38/src/: main.rs
.jjconflict-side-38/: Cargo.toml
.jjconflict-side-38/tests/: inventory_test.rs
.jjconflict-side-39/: Cargo.toml
.jjconflict-side-39/src/animation/: components.rs
.jjconflict-side-39/src/combat/status_effects/status_systems/: slowed.rs
.jjconflict-side-39/src/configuration/: view.rs
.jjconflict-side-39/src/econ/: currency.rs
.jjconflict-side-39/src/enemy/systems/: enemy_spawn.rs
.jjconflict-side-39/src/items/: components.rs
.jjconflict-side-39/src/items/equipment/: unequip.rs
.jjconflict-side-39/src/items/lootable/: update_magnets.rs
.jjconflict-side-39/src/map/: chest.rs
.jjconflict-side-39/src/map/helpers/generator/: walls.rs
.jjconflict-side-39/src/ui/pause_menu/: stats_menu.rs
crates/baba_yaga_derive/: Cargo.toml
crates/bevy_nc/: Cargo.toml
crates/bevy_nc/cli/: app.rs  main.rs
crates/bevy_nc/cli/app/: event.rs
crates/bevy_nc/src/: lib.rs  nc.rs  plugin.rs
crates/bevy_nc/src/plugin/: handlers.rs  tcp.rs
crates/config_macros/: Cargo.toml
crates/weba_yaga/: Cargo.toml
examples/: simple.rs
main/: Cargo.toml  baba_yaga.js  baba_yaga_bg.wasm.d.ts  index.html  package.json
main/assets/config/: enemies.ron  instances.ron
main/src/: lib.rs
main/src/ai/: plugin.rs  simple_motion.rs  state.rs
main/src/animation/: components.rs  plugin.rs
main/src/animation/spells/: spell_animations.rs
main/src/character/: mod.rs
main/src/combat/: invulnerable.rs  mana.rs  plugin.rs
main/src/combat/melee/: melee_attack.rs  mod.rs
main/src/combat/projectile/: components.rs  handle_collisions.rs  spawn.rs
main/src/combat/shield/: shield_block.rs
main/src/configuration/: collision_layers.rs  configuration_data.rs  debug.rs  game_data.rs  mod.rs  plugins.rs  schedule.rs  setup.rs  view.rs
main/src/econ/: mod.rs  plugin.rs
main/src/economy/: gold.rs
main/src/enemy/systems/: enemy_movement.rs  enemy_spawn.rs  handle_enemy_defeated.rs  load_enemy_data.rs
main/src/items/: components.rs  item_factory.rs  mainhand_factory.rs  offhand_factory.rs
main/src/items/equipment/: equipment_transform.rs  plugin.rs  use_equipped.rs
main/src/items/inventory/: inventory.rs
main/src/items/lootable/: plugin.rs  update_lootable_items.rs  update_magnets.rs
main/src/labels/: mod.rs  sets.rs
main/src/map/: chest.rs  components.rs
main/src/map/helpers/generator/: hub_generator.rs  instance_generator.rs  map_data.rs  utils.rs
main/src/map/helpers/generator/prefabs/: empty_square.rs  hub.rs  temple.rs
main/src/map/systems/: load_instance_data.rs
main/src/map/systems/zone/: spawn_zone_colliders.rs  spawn_zone_entities.rs
main/src/npc/: components.rs  setup.rs
main/src/player/: events.rs  interact.rs  mod.rs  plugin.rs  resources.rs
main/src/player/components/: stats.rs
main/src/player/systems/: camera_follow.rs  consume.rs  cursor.rs  input.rs  mod.rs  spawn_player.rs
main/src/ui/: display_case.rs  display_case_slot.rs  player_overlay.rs  plugin.rs  primitives.rs  start_screen.rs
main/src/ui/loading/: load_screen.rs
main/src/ui/npc/: stats_shop.rs
main/src/ui/pause_menu/: inventory_menu.rs  main_menu.rs  stats_menu.rs
pr-2/: baba_yaga.js  baba_yaga_bg.wasm.d.ts  index.html
pr-2/assets/: permissions.txt
src/: lib.rs  main.rs
src/ai/: simple_motion.rs  state.rs
src/animation/: components.rs  plugin.rs
src/assets/: mod.rs
src/combat/: mana.rs  plugin.rs
src/configuration/: assets.rs  collision.rs  debug.rs  mod.rs  plugins.rs  properties.rs  schedule.rs  setup.rs  time.rs  view.rs
src/controller/: plugin.rs
src/debug/: mod.rs
src/despawn/: plugin.rs
src/enemy/: components.rs  plugin.rs
src/items/: components.rs  item_factory.rs  mainhand_factory.rs  offhand_factory.rs
src/labels/: layer.rs  sets.rs
src/map/: components.rs  plugin.rs
src/npc/: components.rs  on_npc_interaction.rs  setup.rs
src/player/: events.rs  interact.rs  plugin.rs
src/progression/: components.rs  plugin.rs  systems.rs
src/ui/: constants.rs  game_over_screen.rs  input.rs  player_overlay.rs  start_screen.rs
(+362 files in other folders)
