[package]
name = "baba_yaga"
version = "0.1.0"
edition = "2021"
default-run = "baba_yaga_bin"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# Target tables
[lib]
name = "baba_yaga"              # for wasm stuff
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "baba_yaga_bin" # for local build stuff
path = "src/main.rs"

[[bin]]
name = "weba_yaga"            # for wasm stuff
path = "src/bin/weba_yaga.rs"

[features]
atlas = []
debug = ["dep:bevy-inspector-egui", "dep:egui_plot", "dep:egui_extras"]
trace = ["bevy/trace_tracy", "bevy/trace"]

[dependencies]
bevy = { version = "0.15.0", features = ["dynamic_linking"] }
bevy_ecs_tilemap = "0.15.0"
bevy_asset_loader = { version = "0.22.0", features = ["2d"] }
accesskit = "0.17"
avian2d = "0.2.0"
tiled = "0.11.0"
serde_json = "1.0"
rand = "0.8"
log = { version = "*", features = [
  "max_level_debug",
  "release_max_level_warn",
] }
serde = "1.0.217"
noise = "0.9"
bevy-inspector-egui = { version = "0.29.1", optional = true }
egui_plot = { version = "0.30.0", optional = true }
egui_extras = { version = "0.30.0", optional = true }

[target.wasm32-unknown-unknown]
rustflags = ["--cfg", "getrandom_backend='wasm_js'"]

[target.wasm32-unknown-unknown.dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "Document",
  "HtmlCanvasElement",
  "Window",
  "Element",
] }


[profile.dev]
# Enable a small amount of optimization in the dev profile.
opt-level = 0
# Enable a large amount of optimization in the dev profile for dependencies.
package."*" = { opt-level = 3 }
build-override = { opt-level = 3 }
