[package]
name = "baba_yaga"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false


[lib]
name = "baba_yaga"              # for wasm stuff
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "baba_yaga_bin" # for local build stuff
path = "src/main.rs"

[dependencies]
bevy = { version = "0.15.0", features = ["dynamic_linking"] }
bevy_ecs_tilemap = "0.15.0"
bevy_asset_loader = { version = "0.22.0", features = ["2d"] }
accesskit = "0.17"
avian2d = "0.2.0"
rand = "0.8"
log = { version = "*", features = [
  "max_level_debug",
  "release_max_level_warn",
] }
serde = "1.0.217"

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "Document",
  "Window",
  "Element",
  "HtmlCanvasElement",
] }
console_error_panic_hook = "0.1"


[features]
atlas = []
trace = ["bevy/trace_tracy", "bevy/trace"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3


[lints.clippy]
type_complexity = "allow"
