[package]
name = "bevy_nc"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bevy-nc"
test = false
bench = false
path = "cli/main.rs"


[dependencies]
async-channel = "2.3.1"
humansize = "2.1.3"
anyhow = "1.0.97"
crossterm = { version = "0.28.1", features = ["event-stream"] }
ratatui = "0.29.0"
async-executor = "1.13.1"
futures-lite = "2.6.0"
futures-concurrency = "7.6.3"
async-io = "2.4.0"
bevy_app = "0.15.3"
bevy_utils = "0.15.3"
bevy_ecs = "0.15.3"
bevy_tasks = "0.15.3"
bevy_reflect = "0.15.3"
serde = "1.0.219"
bevy_ptr = "0.15.3"
bevy_asset = "0.15.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
